# mova-mc

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  PRODUCT.md  README-uk.md  README.md  ROADMAP.md  _launch_dev.py  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py  __main__.py  app.py  dev_progress_log.py  job_bridge.py  schemas.py  sse.py
backend/routes/: __init__.py  catalog.py  config.py  jobs.py  logs.py  mods.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: LiveResultsPanels.tsx  LogPanel.tsx  Wizard.css  Wizard.tsx
frontend/src/context/: WizardContext.tsx
frontend/src/utils/: errors.ts  qaLive.test.ts  qaLive.ts
openspec/: config.yaml
scripts/: compile.bat  compile.sh  setup.bat  setup.sh  start.bat  start.sh
src/app/: __init__.py  __main__.py  exceptions.py  logging_config.py
src/app/application/: __init__.py  batching.py  job.py  (+4 more)
tests/: conftest.py  test_app.py  test_archive_handler.py  test_archive_handler_extended.py  test_caching.py  test_cancellation_results.py  test_command_line_extended.py  test_config_loader.py  test_config_loader_extended.py  test_config_roundtrip.py  test_data.py  test_domain_property.py  test_file_manager.py  test_file_manager_extended.py  test_glossary.py  test_google_translate_extended.py  test_google_translate_service.py  test_inline_qa_wrapper.py  test_jar_packager.py  test_jar_packager_extended.py  test_job_bridge.py  test_json_parser_edge.py  test_judge.py  test_judge_prompts.py  test_key_bindings.py  test_lang_discovery.py  test_lang_parser_edge.py  test_languages_extended.py  test_lint_ukrainian.py  test_litellm_sdk.py  test_logging_config.py  test_main_entry.py  test_mcfunction_parser_edge.py  test_mod_scanner.py  test_model_list.py  test_openai_batch.py  test_openai_check.py  test_openai_compatible_service.py  test_openai_translate_service.py  test_opencode_provider.py  (+24 more)
tests/contracts/: test_provider_contract.py  test_reasoning_transport.py
tests/integration/: __init__.py  test_e2e_extended.py  test_jar_roundtrip.py  test_pipeline_e2e.py
(+94 files in other folders)
