[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mova-mc"
version = "1.0.0"
description = "MovaMC - A tool for translating Minecraft mod files between languages."
requires-python = ">=3.10"
license = {text = "CC BY-NC 4.0"}
readme = "README.md"
authors = [
    {name = "Andrii Hermak"},
]

dependencies = [
    "deep-translator>=1.9.0",
    "rich>=12.0.0",
    "loguru>=0.7.0",
    "tomli>=2.0; python_version < '3.11'",
    "json5>=0.14.0",
    "textual>=1.0.0",
    "tomli-w>=1.0",
    "httpx>=0.27.0",
    "rarfile>=4.0",
]

[project.optional-dependencies]
ai = [
    "litellm>=1.35",
    "python-dotenv>=0.19.0",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.6",
    "import-linter>=2.0",
    "pytest-asyncio>=1.4.0",
    "hypothesis>=6.155.2",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
mova = "app.interfaces.cli.main:main"
mova-app = "app.interfaces.tui.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["deep_translator.*", "litellm.*", "textual.*", "tomli_w.*", "rich.*", "loguru.*", "dotenv.*", "openai.*"]
ignore_missing_imports = true

[tool.coverage.report]
fail_under = 63
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "ARG", "RUF", "S", "SIM", "PTH"]
ignore = [
    "S101", "S104", "S301", "S603", "S607",
    "S110", "N806", "SIM105", "SIM102", "SIM110",
    "ARG001", "ARG002", "ARG004",
    "S608", "B023", "RUF012", "RUF005",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["RUF001", "RUF003", "E501", "S108", "RUF002", "ARG005", "I001"]
"src/app/interfaces/tui/i18n.py" = ["RUF001"]
"src/app/interfaces/tui/key_bindings.py" = ["RUF001", "RUF002"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
